# Diploma_personal_diary

./: .flake8  Dockerfile  README.md  docker-compose.yml  env_example  pyproject.toml
.github/workflows/: ci-cd.yml  deploy.sh
alarm/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
alarm/management/commands/: check_alarm_sounds.py  create_default_sound.py  reset.py
alarm/migrations/: 0001_initial.py
alarm/static/: style.css
alarm/templates/alarm/: alarm_clock.html  alarm_confirm_delete.html  alarm_detail.html  alarm_form.html  alarm_list.html  alarm_ring.html
config/: celery.py  settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py  0003_mediafile.py  0004_diaryentry_images.py  0005_alter_mediafile_file.py
diary/static/: home_animations.css  style.css
diary/templates/: base.html  home.html
diary/templates/diary/: entries_partial.html  entry_confirm_delete.html  entry_detail.html  entry_form.html  entry_list.html
diary/templates/registration/: login.html  signup.html
nginx/: nginx_conf
planner/: api.py  email_service.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
planner/management/commands/: check_notifications.py  create_test_digest.py  send_daily_digest.py  test_celery_planner.py  test_email.py
planner/migrations/: 0001_initial.py  0002_notification_notificationpreference_and_more.py  0003_remove_notification_task_remove_notification_user_and_more.py  0004_notification_notificationpreference_and_more.py
planner/services/: email_service.py
planner/static/: style.css
planner/templates/planner/: calendar.html  daily_digest.html  planning.html  task_confirm_delete.html  task_form.html  task_list.html  task_notification.html
planner/templates/planner/emails/: daily_digest.html
planner/templatetags/: planner_extras.py
static/: base.css
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username.py
users/templates/users/: profile_edit.html
users/templates/users/registration/: signup.html
